# DSND-Dashboard-Project

./: README.md
dsnd-dashboard-project/: README.md  install  pyproject.toml  requirements.txt
dsnd-dashboard-project/assets/: report.css
dsnd-dashboard-project/python_package/: setup.py
dsnd-dashboard-project/python_package/employee_events/: README.md  __init__.py  __main__.py  employee.py  employee_events.db  query_base.py  sql_execution.py  team.py  testdb.py
dsnd-dashboard-project/python_package/employee_events.egg-info/: PKG-INFO  SOURCES.txt
dsnd-dashboard-project/python_package/employee_events/employee_events.egg-info/: PKG-INFO  SOURCES.txt
dsnd-dashboard-project/report/: dashboard.py  utils.py
dsnd-dashboard-project/report/base_components/: __init__.py  base_component.py  data_table.py  dropdown.py  matplotlib_viz.py  radio.py
dsnd-dashboard-project/report/combined_components/: __init__.py  combined_component.py  form_group.py
dsnd-dashboard-project/report/templates/: landing_page.html  report_page.html
dsnd-dashboard-project/src/: build_project_assets.py  crawl.yml  utils.py
dsnd-dashboard-project/src/generated_data/: employees.json  managers.json  shifts.json  team_names.json
dsnd-dashboard-project/tests/: test_employee_events.py
